Fix clipping issues with inline board task

--- a/Netptune.App/ClientApp/src/app/features/boards/components/board-group-task-inline/board-group-task-inline.component.scss-theme.scss
+++ b/Netptune.App/ClientApp/src/app/features/boards/components/board-group-task-inline/board-group-task-inline.component.scss-theme.scss
@@ -8,6 +8,7 @@
   $background: map-get($theme, background);
 
   .inline-task-textarea {
+    color: mat-color($foreground, text);
     background-color: mat-color($background, card);
   }
 
